fix: spacing, fonts and colors in categories & added types folder

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,10 @@
     box-sizing: border-box;
 }
 
-html, body {
-    font-family: 'Poppins', sans-serif;
-    overflow-x: hidden; 
+html,
+body {
+    font-family: "Inter", sans-serif;
+    overflow-x: hidden;
     @apply bg-slate-50;
     height: 100%;
 }
